# askhr-rag-agent

./: .env.example  .gitignore  pyproject.toml  tmp.py
src/askhr/: config.py  main.py
src/askhr/agent/: base_llm.py  graph.py  nodes.py  schemas.py  state.py
src/askhr/ingestion/: chunking.py  loader.py  pipeline.py
src/askhr/retrieval/: embeddings.py  pinecone_client.py  rerank.py  rewrite.py  search.py  upsert.py
